--- a/compiler/compiler.vcxproj
+++ b/compiler/compiler.vcxproj
@@ -169,17 +169,20 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="ast\ast.cpp" />
     <ClCompile Include="gv\gv.cpp" />
     <ClCompile Include="lexer\lexer.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="mem\mem.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="ast\ast.h" />
     <ClInclude Include="dbg\dbg.h" />
     <ClInclude Include="defs.h" />
     <ClInclude Include="gv\gv.h" />
     <ClInclude Include="lexer\lexer.h" />
     <ClInclude Include="mem\mem.h" />
+    <ClInclude Include="rtti\rtti.h" />
     <ClInclude Include="utils\utils.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
