--- a/compiler/compiler.vcxproj.filters
+++ b/compiler/compiler.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="mem\mem.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="ast\ast.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="defs.h">
@@ -45,6 +48,12 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="mem\mem.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="ast\ast.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="rtti\rtti.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
