--- a/compiler/compiler.vcxproj
+++ b/compiler/compiler.vcxproj
@@ -174,6 +174,7 @@
     <ClCompile Include="lexer\lexer.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="mem\mem.cpp" />
+    <ClCompile Include="syntax\syntax.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ast\ast.h" />
@@ -183,6 +184,7 @@
     <ClInclude Include="lexer\lexer.h" />
     <ClInclude Include="mem\mem.h" />
     <ClInclude Include="rtti\rtti.h" />
+    <ClInclude Include="syntax\syntax.h" />
     <ClInclude Include="utils\utils.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
