--- a/compiler/compiler.vcxproj
+++ b/compiler/compiler.vcxproj
@@ -174,6 +174,7 @@
     <ClCompile Include="lexer\lexer.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="mem\mem.cpp" />
+    <ClCompile Include="semantic\semantic.cpp" />
     <ClCompile Include="syntax\syntax.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -184,6 +185,7 @@
     <ClInclude Include="lexer\lexer.h" />
     <ClInclude Include="mem\mem.h" />
     <ClInclude Include="rtti\rtti.h" />
+    <ClInclude Include="semantic\semantic.h" />
     <ClInclude Include="syntax\syntax.h" />
     <ClInclude Include="utils\utils.h" />
   </ItemGroup>
