--- a/compiler/compiler.vcxproj.filters
+++ b/compiler/compiler.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClCompile Include="syntax\syntax.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="semantic\semantic.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="defs.h">
@@ -60,6 +63,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="syntax\syntax.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="semantic\semantic.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
