--- a/compiler/compiler.vcxproj.filters
+++ b/compiler/compiler.vcxproj.filters
@@ -36,6 +36,21 @@
     <ClCompile Include="semantic\semantic.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="ir\ir.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="ir\items\block.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="ir\items\instruction.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="ir\items\prototype.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="ir\items\body.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="defs.h">
@@ -66,6 +81,24 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="semantic\semantic.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="ir\ir.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="ir\items\block.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="ir\items\instruction.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="ir\items\prototype.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="ir\items\body.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="ir\items\ins_type.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
