--- a/compiler/compiler.vcxproj.filters
+++ b/compiler/compiler.vcxproj.filters
@@ -78,6 +78,9 @@
     <ClCompile Include="ir\instructions\call.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="intrin\intrin.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="defs.h">
@@ -162,6 +165,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="enums\ast_ir_types.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="intrin\intrin.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
